--- a/js/kadai_010/holiday.html
+++ b/js/kadai_010/holiday.html
@@ -5,6 +5,6 @@
   <title>JavaScriptの基礎を学ぼう_10章課題</title>
 </head>
 <body>
-  <script src="holiday.js"></script>
+  <script src="object.js"></script>
 </body>
 </html>
