--- a/ajax.html
+++ b/ajax.html
@@ -7,8 +7,8 @@
 </head>
 
 <body>
-    <h1>東京の明日の天気</h1>
-    <button id="ajax-btn">取得</button>
+  <h1>ダミーデータを送信</h1>
+  <button id="ajax-btn">送信</button>
     <script src="js/ajax.js"></script>
 </body>
 
